# based-agent-exp

./: .gitignore  README.md  cli.py  pyproject.toml
abis/: registrar_abi.json
cdpdemo/: .env_sample  agents.py  constants_utils.py  create_wallet.py  dao_helpers.py  dao_summon_helpers.py  dao_yeeter_summon_helpers .py  db.json  farcaster_utils.py  graph_utils.py  helpers.py  memory_retention_utils.py  prompt_helpers.py  run.py
cdpdemo/abis/: higher_hos_abi.json  l2_resolver_abi.json
cdpdemo/characters/: default_character_data.json  iron_blacksmith_data.json  pickle_rick_data.json
characters/: default_character_data.json  iron_blacksmith_data.json  summoner.json
characters/aftermath_of_ashes/: aisha_the_watcher_youssef.json  elysium.json  (+2 more)
dao-agent-demo/: .env_sample  agents.py  create_sim.py  create_wallet.py  dao_summon_helpers.py  farcaster_utils.py  graph_utils.py  helpers.py  memory_retention_utils.py  prompt_helpers.py  run.py  sim_agent.py  sim_phases.py
dao_agent_demo/: agent_handler.py  agents.py  constants_utils.py  create_sim.py  create_wallet.py  dao_summon_helpers.py  dao_yeeter_summon_helpers.py  farcaster_utils.py  graph_utils.py  image_utils.py  import_knowledge.py  interval_utils.py  logs.py  memory_retention_utils.py  prompt_helpers.py  run.py  sim_agent.py  sim_phases.py  tools.py  worlds.py
operators/: alderman.json  bard.json  crier.json  governor.json  maester.json  synthesizer.json  taskmaster.json
worlds/: aftermath_of_ashes.json  hogwarts.json  moon_is_harsh.json  roman_republic.json  verdictia.json  xenon_prime.json
(+57 files in other folders)
