[tool.poetry]
name = "cdpdemo"
version = "0.1.0"
description = ""
authors = ["Dekan <dekanbrown@odyssy.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.54.4"
python-dotenv = "^1.0.1"
swarm = {git = "ssh://git@github.com/openai/swarm.git"}
requests = "^2.32.3"
eth-abi = "^5.1.0"
subgrounds = "^1.9.1"
tinydb = "^4.8.2"
eth-account = "^0.13.4"
web3 = "^7.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
