[tool.poetry]
name = "dao-agents-simulator"
version = "0.1.0"
description = ""
authors = ["Dekan <dekanbrown@odyssy.io>"]
readme = "README.md"
packages = [ { include = "dao_agent_demo" }, {include = "cli.py" } ]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.54.4"
python-dotenv = "^1.0.1"
swarm = {git = "ssh://git@github.com/openai/swarm.git"}
requests = "^2.32.3"
eth-abi = "^5.1.0"
subgrounds = "^1.9.1"
tinydb = "^4.8.2"
eth-account = "^0.13.4"
web3 = "^7.6.0"
inflect = "^7.4.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dao-agents = "cli:run"